--- a/src/app/shared/slider/slider.component.html
+++ b/src/app/shared/slider/slider.component.html
@@ -20,8 +20,8 @@
     </div>
     <div class="flick-overlay">
       <div class="flick-content">
-        <h1>Un titulo</h1>
-        <p>Texto para complementar</p>
+        <h1>Hola! Me llamo Rodrigo Guzman, soy Desarrollador de Software</h1>
+        <p>Desarollemos tu sitio web moderno y escalable</p>
       </div>
     </div>
   </div>
